--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -14,6 +14,52 @@ body {
   color: #070702;
 } */
 
+.modaloverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalcontent {
+  background-color: #DDE6ED;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 50%;
+  width: 100%;
+  position: absolute;
+}
+
+
+.modalcancelbutton {
+  position: absolute;
+  top: 79%;
+  right: 150px;
+  height: 40px;
+  border-radius: 0.5rem; /*8px*/
+  padding-left: 1rem;
+  padding-right: 1rem;
+  align-content: center;
+  background: #526D82;
+  color: white;
+  border: 1px solid #ccc;
+  font-weight: 500;
+  font-size: 0.875rem; /*14px*/
+  /* font-size: 16px;
+  cursor: pointer; */
+}
+
+.modalcancelbutton:hover{
+  background-color:#9DB2BF;
+
+}
+
+
 .ul {
   list-style: none;
   margin: 0;
@@ -143,7 +189,7 @@ body {
 }
 
 
-.modal-backdrop {
+/* .modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -153,7 +199,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+/* 
+.modal {
+  background-color: #bababa;
+  padding: 2rem;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0 0 10px 0 #e6e678;
+  max-width: 67rem;
+  width: 100%;
 }
+
+.modal h2,
+.modal h1 {
+  margin: 0;
+} */
 
 
 .tutorial-article img {
@@ -256,21 +317,6 @@ body {
 #tutorial-form button:hover,
 #tutorial-form button:active {
   background-color: #939185;
-}
-
-.modal {
-  background-color: #bababa;
-  padding: 2rem;
-  border-radius: 4px;
-  border: none;
-  box-shadow: 0 0 10px 0 #e6e678;
-  max-width: 67rem;
-  width: 100%;
-}
-
-.modal h2,
-.modal h1 {
-  margin: 0;
 }
 
 
