--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -58,7 +58,7 @@ body {
   align-content: center;
   /* background: #f3f4f4;
   color: white; */
-  border: 2px solid #ccc;
+  border: 2px solid #91a4b3;
   font-weight: 500;
   font-size: 0.875rem; /*14px*/
   /* font-size: 16px;
