--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -52,13 +52,13 @@ body {
   right: 0; 
   height: 24px;
   width: 24x;
-  border-radius: 0.5rem; /*8px*/
+  border-radius: 0.1rem; /*8px*/
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   align-content: center;
-  /* background: #f3f4f4;
-  color: white; */
-  border: 2px solid #91a4b3;
+  background: #081924;
+  color: white;
+  /* border: 1px solid #081924; */
   font-weight: 500;
   font-size: 0.875rem; /*14px*/
   /* font-size: 16px;
@@ -66,7 +66,7 @@ body {
 }
 
 .modalcancelbutton:hover{
-  background-color:#9DB2BF;
+  background-color:#115d8b;
 
 }
 
